Correction to tonnage potential (not yet included in v0.5

--- a/notebooks/0_preprocessing/QINCM preprocessing_KBN.ipynb
+++ b/notebooks/0_preprocessing/QINCM preprocessing_KBN.ipynb
@@ -188,6 +188,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trips.loc[(knelpunt_route['MA_Mook'] == True) & (knelpunt_route['WA_St. Andries'] == True)  & (knelpunt_route['DL_Emmerich'] == True) ].T.iloc[1:].drop(['Origin_X', 'Origin_Y', 'Destination_X', 'Destination_Y']).to_excel('Maas_DL_via_StAndries.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
@@ -389,7 +398,7 @@
     "    beladingsgraad_potential = ((depth - trips['Ledige_diepgang']) / (trips['Maximale_diepgang'] - trips['Ledige_diepgang']))\n",
     "    beladingsgraad_potential.clip(lower=0, upper=1, inplace=True)\n",
     "    beladingsgraad_potential.fillna(0, inplace=True)  # Nans exist because of vessel with loadcapacity=0\n",
-    "    tonnage_potential = beladingsgraad_potential * trips['LoadCapacity__t']\n",
+    "    tonnage_potential = beladingsgraad_potential * trips['LoadCapacity__t'] * trips['Aantal Vaarbewegingen (-)']\n",
     "\n",
     "    # Reaction: Minimal of 0.2 (so max 80% reduction), maximum of 1.0 (no change)\n",
     "    load_decrease_clipped = load_decrease.clip(lower=0.2, upper=1)\n",
