--- a/notebooks/0_preprocessing/QINCM preprocessing_KBN.ipynb
+++ b/notebooks/0_preprocessing/QINCM preprocessing_KBN.ipynb
@@ -410,7 +410,7 @@
     "    \n",
     "    # Assuming that at 20% beladingsgraad the trips drop to 0\n",
     "    trips_feasible = trips_n * (load_decrease_clipped != 0.2)\n",
-    "    tonnage_feasible = tonnage * (load_decrease_clipped != 0.2)\n",
+    "    tonnage_feasible = trips_subset['Totale Vracht (ton)'] * (load_decrease_clipped != 0.2)\n",
     "    \n",
     "    response = pd.DataFrame(\n",
     "        index = trips.index,\n",
