Create (QH) data set with draft instead of waterdepth. Now at version KBN_v0.7.

--- a/notebooks/0_preprocessing/QINCM preprocessing_KBN.ipynb
+++ b/notebooks/0_preprocessing/QINCM preprocessing_KBN.ipynb
@@ -81,13 +81,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# outputdir = Path('preprocessing_KBN_v0.6')\n",
-    "# outputdir.mkdir(exist_ok=True)\n",
+    "outputdir = Path('preprocessing_KBN_v0.7')\n",
+    "outputdir.mkdir(exist_ok=True)\n",
     "\n",
-    "# BIVAS_results_folder = inputdir / 'BIVAS_results'\n",
+    "BIVAS_results_folder = inputdir / 'BIVAS_results'\n",
     "\n",
-    "# B = pyBIVAS(BIVAS_results_folder / 'Bivas_Run3 Q Q1800 T Ref_2014.db')\n",
-    "# B.set_scenario(52)"
+    "B = pyBIVAS(BIVAS_results_folder / 'Bivas_Run3 Q Q1800 T Ref_2014.db')\n",
+    "B.set_scenario(52)"
    ]
   },
   {
@@ -96,13 +96,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outputdir = Path('preprocessing_KBN_v0.6_WLO2050_hoog')\n",
-    "outputdir.mkdir(exist_ok=True)\n",
+    "# outputdir = Path('preprocessing_KBN_v0.6_WLO2050_hoog')\n",
+    "# outputdir.mkdir(exist_ok=True)\n",
     "\n",
-    "BIVAS_results_folder = inputdir / 'BIVAS_results'\n",
+    "# BIVAS_results_folder = inputdir / 'BIVAS_results'\n",
     "\n",
-    "B = pyBIVAS(BIVAS_results_folder / 'Bivas_Run3 Q Q1800 T WLO2050_Hoog.db')\n",
-    "B.set_scenario(52)"
+    "# B = pyBIVAS(BIVAS_results_folder / 'Bivas_Run3 Q Q1800 T WLO2050_Hoog.db')\n",
+    "# B.set_scenario(52)"
    ]
   },
   {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,6 +386,49 @@
     "    fout.write(json.dumps(QH_json, indent=2))\n",
     "# Test read function\n",
     "# pd.read_json(outputdir / 'knelpunt_discharge_waterdepth.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Addition in v0.7\n",
+    "\n",
+    "def diepte_to_diepgang(knelpunten_Q_WD):\n",
+    "    \"\"\"\n",
+    "    Correct depth to draft.\n",
+    "    Parameters are described in IRM project\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    knelpunten_Q_diepgang = knelpunten_Q_WD.copy()\n",
+    "    for knelpunt in knelpunten_Q_diepgang.index:\n",
+    "        river = knelpunt.split('_')[0]\n",
+    "        if knelpunt == \"WA_Nijmegen\":\n",
+    "            knelpunten_Q_diepgang.loc[knelpunt] -= 0.2\n",
+    "        elif river in ['BR', 'WA', 'IJ', 'NRL', 'DL']:\n",
+    "            knelpunten_Q_diepgang.loc[knelpunt] -= 0.2\n",
+    "        elif river in ['MWK', 'TK']:\n",
+    "            knelpunten_Q_diepgang.loc[knelpunt] -= 0.7\n",
+    "        elif river in ['ARK']:\n",
+    "            knelpunten_Q_diepgang.loc[knelpunt] -= 1.0\n",
+    "        elif river in ['MA']:\n",
+    "            knelpunten_Q_diepgang.loc[knelpunt] /= 1.4\n",
+    "        else:\n",
+    "            NotImplemented()\n",
+    "    return knelpunten_Q_diepgang\n",
+    "\n",
+    "Q_diepgang = diepte_to_diepgang(QH)\n",
+    "\n",
+    "# Manual create json\n",
+    "QH_json = {}\n",
+    "for k in Q_diepgang.index:\n",
+    "    QH_json[k] = {np.round(Q, 0): np.round(H, 3) for Q, H in zip(QQ.loc[k].values, Q_diepgang.loc[k].values)}\n",
+    "\n",
+    "outputfile = outputdir / 'knelpunt_discharge_draught.json'\n",
+    "with open(outputfile, 'w') as fout:\n",
+    "    fout.write(json.dumps(QH_json, indent=2))"
    ]
   },
   {
@@ -1296,7 +1339,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
